--- a/dev/html/index.html
+++ b/dev/html/index.html
@@ -68,7 +68,7 @@
      </div>
      <div class="job">
       <div class="job-title colst">
-       <h3><a data-toggle="collapse" onclick="expColToggle($(this).parent().parent().get(0));$(this).parents().next('div.job-panel.collapse').collapse('toggle');"><span class="avoidwrap">Product Owner & </span> <span class="avoidwrap">Senior Technical Project Manager</span></a></h3>
+       <h3><a data-toggle="collapse" onclick="expColToggle($(this).parent().parent().get(0));$(this).parents().next('div.job-panel.collapse').collapse('toggle');"><span class="avoidwrap">Technical Product Manager</span></a></h3>
       </div>
       <div class="job-panel collapse show">
        <div class="row">
@@ -79,7 +79,7 @@
        <div class="job-company-description">Vectorform is a state of the art digital agency, innovation driver, and think tank that caters to clients and end users worldwide.</div>
        <div class="job-summary">
         <h5>Summary</h5>
-        Direct hire position within the Project Management Organization at Vectorform in the capacity of product owner and project manager in charge of delivering the Mopar.com program.
+        Direct hire position within the Project Management Organization at Vectorform in the capacity of product manager and technical project manager in charge of delivering the Mopar.com program.
        </div>
        <div class="job-responsibilities">
         <h5>Responsibilities <span class="avoidwrap"><sup>(I am responsible for ...)</sup></span></h5>
