--- a/src/assets/index.html
+++ b/src/assets/index.html
@@ -6,7 +6,7 @@
     <link rel="shortcut icon" href="./favicon.ico">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-    <title>React App</title>
+    <title>Ion Caza - Technical Resume</title>
   </head>
   <body>
     <noscript>
